fixed overflow and scrollbar
ok im going to bed

--- a/css/styles-app.css
+++ b/css/styles-app.css
@@ -132,3 +132,7 @@ li {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
+
+main{
+  overflow-x: hidden;
+} 
